Добавлены переходы hover, подчеркивание текущей страницы

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a class="logo-nav" href="WebStudio">Web<span>Studio</span></a>
           <ul class="nav-links">
             <li class="nav-links-items">
-              <a href="./index.html">Студия</a>
+              <a class="current-page" href="./index.html">Студия</a>
             </li>
             <li class="nav-links-items">
               <a href="./portfolio.html">Портфолио</a>
