--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
               <a href="./index.html">Студия</a>
             </li>
             <li class="nav-links-items">
-              <a href="./portfolio.html">Портфолио</a>
+              <a class="current-page" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="nav-links-items">
               <a href="Контакты">Контакты</a>
