--- a/index.html
+++ b/index.html
@@ -106,31 +106,37 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="our-work-flex">
             <li class="our-work-flex-item">
-              <a href="box-1"
+              <a class="our-work-links" href="box-1"
                 ><img
                   src="./images/1-1.jpg"
-                  alt="box-1"
+                  alt="Десктопные приложения"
                   width="370"
                   height="auto"
-              /></a>
+                />
+                <h3 class="our-work-links-title">Десктопные приложения</h3>
+              </a>
             </li>
             <li class="our-work-flex-item">
-              <a href="box-2"
+              <a class="our-work-links" href="box-2"
                 ><img
                   src="./images/1-2.jpg"
-                  alt="box-2"
+                  alt="Мобильные приложения"
                   width="370"
                   height="auto"
-              /></a>
+                />
+                <h3 class="our-work-links-title">Мобильные приложения</h3>
+              </a>
             </li>
             <li class="our-work-flex-item">
-              <a href="box-3"
+              <a class="our-work-links" href="box-3"
                 ><img
                   src="./images/1-3.jpg"
-                  alt="box-3"
+                  alt="Дизайнерские решения"
                   width="370"
                   height="auto"
-              /></a>
+                />
+                <h3 class="our-work-links-title">Дизайнерские решения</h3>
+              </a>
             </li>
           </ul>
         </div>
