Сделан оверлей с текстом на карточке Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,13 +66,22 @@
         <!-- Список проектов с картинками -->
         <ul class="projects-list">
           <li class="projects-list-item">
-            <a href=""
-              ><img
-                src="./images/portfolio-page-1.jpg"
-                alt="Технокряк"
-                width="370"
-                height="294"
-              />
+            <a href="">
+              <div class="projects-description-layer">
+                <img
+                  src="./images/portfolio-page-1.jpg"
+                  alt="Технокряк"
+                  width="370"
+                  height="294"
+                />
+                <div class="projects-description-overlay">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
               <div class="projects-list-name">
                 <h3>Технокряк</h3>
                 <p>Веб-сайт</p>
@@ -80,13 +89,22 @@
             </a>
           </li>
           <li class="projects-list-item">
-            <a href=""
-              ><img
-                src="./images/portfolio-page-2.jpg"
-                alt="Постер New Orlean vs Golden Star"
-                width="370"
-                height="294"
-              />
+            <a href="">
+              <div class="projects-description-layer">
+                <img
+                  src="./images/portfolio-page-2.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                  height="294"
+                />
+                <div class="projects-description-overlay">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
               <div class="projects-list-name">
                 <h3>Постер New Orlean vs Golden Star</h3>
                 <p>Дизайн</p>
@@ -95,12 +113,21 @@
           </li>
           <li class="projects-list-item">
             <a href="">
-              <img
-                src="./images/portfolio-page-3.jpg"
-                alt="Ресторан Seafood"
-                width="370"
-                height="294"
-              />
+              <div class="projects-description-layer">
+                <img
+                  src="./images/portfolio-page-3.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                  height="294"
+                />
+                <div class="projects-description-overlay">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
               <div class="projects-list-name">
                 <h3>Ресторан Seafood</h3>
                 <p>Приложение</p>
@@ -109,12 +136,21 @@
           </li>
           <li class="projects-list-item">
             <a href="">
-              <img
-                src="./images/portfolio-page-4.jpg"
-                alt="Проект Prime"
-                width="370"
-                height="294"
-              />
+              <div class="projects-description-layer">
+                <img
+                  src="./images/portfolio-page-4.jpg"
+                  alt="Проект Prime"
+                  width="370"
+                  height="294"
+                />
+                <div class="projects-description-overlay">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
               <div class="projects-list-name">
                 <h3>Проект Prime</h3>
                 <p>Маркетинг</p>
@@ -123,12 +159,21 @@
           </li>
           <li class="projects-list-item">
             <a href="">
-              <img
-                src="./images/portfolio-page-5.jpg"
-                alt="Проект Boxes"
-                width="370"
-                height="294"
-              />
+              <div class="projects-description-layer">
+                <img
+                  src="./images/portfolio-page-5.jpg"
+                  alt="Проект Boxes"
+                  width="370"
+                  height="294"
+                />
+                <div class="projects-description-overlay">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
               <div class="projects-list-name">
                 <h3>Проект Boxes</h3>
                 <p>Приложение</p>
@@ -137,12 +182,21 @@
           </li>
           <li class="projects-list-item">
             <a href="">
-              <img
-                src="./images/portfolio-page-6.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
+              <div class="projects-description-layer">
+                <img
+                  src="./images/portfolio-page-6.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <div class="projects-description-overlay">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
               <div class="projects-list-name">
                 <h3>Inspiration has no Borders</h3>
                 <p>Веб-сайт</p>
@@ -151,12 +205,21 @@
           </li>
           <li class="projects-list-item">
             <a href="">
-              <img
-                src="./images/portfolio-page-7.jpg"
-                alt="Издание Limited Edition"
-                width="370"
-                height="294"
-              />
+              <div class="projects-description-layer">
+                <img
+                  src="./images/portfolio-page-7.jpg"
+                  alt="Издание Limited Edition"
+                  width="370"
+                  height="294"
+                />
+                <div class="projects-description-overlay">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
               <div class="projects-list-name">
                 <h3>Издание Limited Edition</h3>
                 <p>Дизайн</p>
@@ -165,12 +228,21 @@
           </li>
           <li class="projects-list-item">
             <a href="">
-              <img
-                src="./images/portfolio-page-8.jpg"
-                alt="Проект LAB"
-                width="370"
-                height="294"
-              />
+              <div class="projects-description-layer">
+                <img
+                  src="./images/portfolio-page-8.jpg"
+                  alt="Проект LAB"
+                  width="370"
+                  height="294"
+                />
+                <div class="projects-description-overlay">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
               <div class="projects-list-name">
                 <h3>Проект LAB</h3>
                 <p>Маркетинг</p>
@@ -179,12 +251,21 @@
           </li>
           <li class="projects-list-item">
             <a href="">
-              <img
-                src="./images/portfolio-page-9.jpg"
-                alt="Growing Business"
-                width="370"
-                height="294"
-              />
+              <div class="projects-description-layer">
+                <img
+                  src="./images/portfolio-page-9.jpg"
+                  alt="Growing Business"
+                  width="370"
+                  height="294"
+                />
+                <div class="projects-description-overlay">
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+              </div>
               <div class="projects-list-name">
                 <h3>Growing Business</h3>
                 <p>Приложение</p>
