Исправления в модальном окне

--- a/index.html
+++ b/index.html
@@ -63,14 +63,6 @@
           <button class="main-activity-button" type="submit">
             Заказать услугу
           </button>
-          <!-- Modal window -->
-          <div class="backdrop is-hidden">
-            <div class="modal-window">
-              <svg class="modal-window-closing" width="30" height="30">
-                <use href="./images/sprite.svg#close" />
-              </svg>
-            </div>
-          </div>
         </div>
       </section>
       <!--Наши преимущества-->
@@ -554,5 +546,13 @@
         </div>
       </div>
     </footer>
+    <!-- Modal window -->
+    <div class="backdrop is-hidden">
+      <div class="modal">
+        <svg class="modal-closing" width="30" height="30">
+          <use href="./images/sprite.svg#close" />
+        </svg>
+      </div>
+    </div>
   </body>
 </html>
